unpackaged/main/default/objects/Account_Membership__c/Account_Membership__c.object-meta.xml
<CustomObject>
    <label>Account Membership</label>
    <nameField>
        <displayFormat>AMS-{0000000}</displayFormat>
        <label>Account Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>