unpackaged/main/default/objects/Account_Membership__c/fields/Left_Date__c.field-meta.xml
<CustomField>
    <fullName>Left_Date__c</fullName>
    <label>Left Date</label>
    <type>Date</type>
</CustomField>